snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.120746-1-all.jar.sha512
6508fac1befceda1c24113e99b3cd828d8acf5a331be724157e804495279026e7eb37f4d6b568b3a13dbc456b02aef7c3f73579dcc66d150bb5e8f1c7995d1be